kube/transactor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: transactor
  name: transactor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactor
  template:
    metadata:
      labels:
        app: transactor
    spec:
      containers:
        - env:
            - name: ACCOUNTS_URL
              value: http://account
            - name: FULLTEXT_URL
              value: http://fulltext
            - name: FRONT_URL
              value: http://front
            - name: STATS_URL
              value: http://stats
            - name: MAIL_URL
              value: http://mail
            - name: STORAGE_CONFIG
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: STORAGE_CONFIG
            - name: DB_URL
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: DB_URL
            - name: SERVER_CURSOR_MAXTIMEMS
              value: "30000"
            - name: SERVER_PORT
              value: "3333"
            - name: SERVER_SECRET
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: SERVER_SECRET
            - name: QUEUE_CONFIG
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: QUEUE_CONFIG
          image: hardcoreeng/transactor:v0.7.252
          name: transactor
          ports:
            - containerPort: 3333
              protocol: TCP
          resources:
            limits:
              memory: "512M"
      restartPolicy: Always
