kube/transactor/transactor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: transactor
  name: transactor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactor
  template:
    metadata:
      labels:
        app: transactor
    spec:
      containers:
        - env:
            - name: ACCOUNTS_URL
              value: http://account
            - name: FULLTEXT_URL
              value: http://fulltext
            - name: FRONT_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: FRONT_URL
            - name: STATS_URL
              value: http://stats
            - name: STORAGE_CONFIG
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: STORAGE_CONFIG
            - name: MONGO_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: MONGO_URL
            - name: DB_URL
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: CR_DB_URL
            - name: SERVER_CURSOR_MAXTIMEMS
              value: "30000"
            - name: SERVER_PORT
              value: "3333"
            - name: SERVER_SECRET
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: SERVER_SECRET
            - name: QUEUE_CONFIG
              value: redpanda:9092
          image: hardcoreeng/transactor:v0.7.426
          name: transactor
          ports:
            - containerPort: 3333
              hostPort: 3333
              protocol: TCP
      restartPolicy: Always
