kube/transactor/transactor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transactor
  name: transactor
spec:
  ports:
    - port: 3333
      protocol: TCP
      targetPort: 3333
  selector:
    app: transactor
  type: ClusterIP
